:recycle: add metodo criar tecnico